# HPhi

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  HPhiconfig.sh  README.md  _test.txt  config.diff  configure.sh  dist.sh  index.html  index_en.html  index_left_en.html  index_left_jp.html  index_right_en.html  index_right_jp.html
.travis_scripts/: deploy_docs.sh  id_rsa.enc
build_gcc/: CMakeCache.txt  cmake_install.cmake
build_gnu/: CMakeCache.txt  cmake_install.cmake
build_new/: CMakeCache.txt  cmake_install.cmake
config/: fujitsu.cmake  gcc.cmake  intel.cmake  sekirei.cmake  sekirei_acc.cmake
develop/: develop_en.html  develop_jp.html
doc/: CMakeLists.txt  sed.sh  userguide.html
doc/en/source/: CMakeLists.txt  conf.py  introduction_en.rst
doc/en/source/_build/doctrees/algorithm/: DynamicalGreen_en.doctree  Full Diagonalization_en.doctree
doc/en/source/_build/doctrees/filespecification/expertmode_en/: Ising_file_en.doctree  PairExcitation_file_en.doctree  SpectrumVec_File_en.doctree
doc/en/source/_build/doctrees/filespecification/outputfiles_en/: CHECK_CoulombIntra_en.doctree  CHECK_Memory_en.doctree  Flct_en.doctree  Flct_rand_en.doctree  SS_en.doctree
doc/en/source/_build/doctrees/filespecification/standardmode_en/: Parameters_for_the_Hamiltonian_en.doctree  Parameters_for_the_dynamical_Green’s_function.doctree
doc/en/source/_build/doctrees/howtouse/: basicusage_en.doctree  prerequisite_en.doctree
doc/en/source/_build/doctrees/tutorial/: expertmode_en.doctree  fourier_en.doctree
doc/en/source/algorithm/: DynamicalGreen_en.rst  Lanczos_en.rst  Partition_en.rst  Realtime_en.rst  TPQ_en.rst  al-index.rst
doc/en/source/filespecification/expertmode_en/: CoulombInter_file_en.rst  ModPara_file_en.rst  PairExcitation_file_en.rst  SingleExcitation_file_en.rst  index_expertmode_en.rst
doc/en/source/filespecification/outputfiles_en/: CHECK_Chemi_en.rst  DynamicalGreen_en.rst  Flct_rand_en.rst  Norm_en.rst  Norm_rand_en.rst  SS_en.rst  index_outputfiles_en.rst  sz_TimeKeeper_en.rst
doc/en/source/filespecification/standardmode_en/: Parameters_for_the_dynamical_Greens_function.rst  Parameters_for_the_lattice_en.rst  Parameters_for_the_numerical_condition.rst
doc/en/source/fourier/: format.rst  index.rst  tutorial.rst  util.rst
doc/en/source/howtouse/: installation_en.rst
doc/en/source/tutorial/: standardmode_en.rst
doc/en/source/wannier/: format.rst  overview.rst  parameter.rst  tutorial.rst
doxygen/: _c_g___eigen_vector_8c.html  _c_g___eigen_vector_8c.js  _c_g___eigen_vector_8c__dep__incl.dot  _c_g___eigen_vector_8c__dep__incl.map  _c_g___eigen_vector_8c__dep__incl.md5  _c_g___eigen_vector_8h.js  (+4703 more)
src/: #CalcByLanczos.c#  #CalcSpectrum.c#  #Lanczos_EigenValue.c#  #SingleEx.c#  #bitcalc.c#  #diagonalcalc.c#  #expec_cisajscktaltdc.c#  #make.sys#  #mltply.c#  #mltplyMPIBoost.c#  #output.c#  #sz.c#  #wrapperMPI.c#  .!27512!xfreemem_large.c  .!28487!expec_cisajscktaltdc.c.bak.bak  .#CalcSpectrum.c  .#Lanczos_EigenValue.c  .#diagonalcalc.c  .#mltply.c  .#wrapperMPI.c  .back_mltply.c.swp  .gitignore  CG_EigenVector.c  CMakeCache.txt  CMakeLists.txt  CalcByCanonicalTPQ.c  CalcByFullDiag.c  CalcByFullDiag.c-e  CalcByFullDiag.h  CalcByLOBPCG.c  CalcByLanczos.c  CalcByLanczos.c-e  CalcByLanczos.h  CalcByTEM.c  CalcByTPQ.c  CalcByTPQ.c-e  CalcByTPQy.c  CalcSpectrum.c  CalcSpectrum.c-e  CalcSpectrumByBiCG.c  (+136 more)
src/StdFace/: #StdFace_main.c#  CMakeLists.txt  ChainLattice.c  ChainLattice.c.bak.bak  FCOrtho.c  HoneycombLattice.c  HoneycombLattice.c-e  HoneycombLattice.c.bak.bak  K  Kagome.c  Kagome.c.bak.bak  Ladder.c  Orthorhombic.c  Pyrochlore.c  SquareLattice.c  StdFace_ModelUtil.c  StdFace_ModelUtil.c-e  StdFace_ModelUtil.h  StdFace_main.c  StdFace_main.c.orig  StdFace_vals.h  TriangularLattice.c  TriangularLattice.c.bak.bak  Wannier90.c  download.sh  makefile_StdFace  setmemory.c  setmemory.h
src/common/: setmemory.c  setmemory.h
src/include/: #mltplyMPI.h#  #struct.h#  .!27733!mfmemory.h  .#mltplyMPI.h  CG_EigenVector.h  CG_EigenVector.h-e  CG_EigenVector.h.bak  CalcByCanonicalTPQ.h  CalcByFullDiag.h  CalcByLOBPCG.h  CalcByLOBPCG.h-e  CalcByLanczos.h  CalcByTEM.h  CalcByTEM.h-e  CalcByTPQ.h  CalcSpectrum.h  CalcSpectrumByBiCG.h  CalcSpectrumByFullDiag.h  CalcSpectrumByLanczos.h  CalcSpectrumByTPQ.h  CalcTime.h  CheckMPI.h  Common.h  Common.h.bak  DefCommon.h  ErrorMessage.h  FileIO.h  FileIO.h-e  FileIO.h.bak  FirstMultiply.h  GPATH  GRTAGS  GTAGS  HPhiMain.h  HPhiMain.h-e  HPhiTrans.h  HPhiTrans.h-e  Lanczos_EigenValue.h  Lanczos_EigenValue.h-e  Lanczos_EigenVector.h  (+93 more)
src/input/: Kitaev43L
src/komega/: CMakeLists.txt  komega.h  komega_bicg.F90  komega_bicg.f90  komega_bicg.h  komega_math.F90  komega_math.f90  komega_math.mod  komega_parameter.mod  komega_vals.F90  komega_vals.f90  komega_vals_c.mod  komega_vals_r.mod  komega_vecs_c.mod  komega_vecs_r.mod  makefile_komega  pkomega_bicg.h  pkomega_bicg.mod
src/latex/: _calc_by_lanczos_8c.tex  _calc_spectrum_8c.tex  _calc_spectrum_by_lanczos_8c.tex  _calc_spectrum_by_t_p_q_8c.tex  _lanczos___eigen_vector_8c.tex  bitcalc_8c.tex  check_8c.tex  d_s_f_m_t_8c.tex  diagonalcalc_8c.tex  expec__cisajs_8c.tex  expec__cisajscktaltdc_8c.tex  expec__totalspin_8c.tex  files.tex  index.tex  make_ham_8c.tex  phys_8c.tex  readdef_8c.tex  refman.tex  sz_8c.tex
src/main/qlmpack/src/: make.sys
src/main/qlmpack/src/check_TPQ_4by4/: ED
src/main/qlmpack/src/sz_check_Ns16/: ED
src/original/TPQ/src_SzConserved/: ED  com.sh
test/basic_tests/: CMakeLists.txt  gtest_example.cpp
tool/: AveSSrand.py  CMakeLists.txt  SpecificHeat.sh  cTPQ.F90  corplot.F90  corplot.f90  dynamicalr2k.F90  finite_T_spectrum.py  fourier.F90  fourier.f90  gen_frmsf.sh  greenr2k.F90  histgram.sh  key2lower.c  makefile_tool  proc_cTPQ_2.f90  respack2wan90.py  sed.sh  wout2geom.sh
tool/ExpertSpin/: MakeDef.py  hphi_io.py  input.txt  pair.txt
tool/FiniteT/: Finite.py
tool/ForOpticalConductivity/: All.sh  OpticalSpectrum.py  input.txt  lattice.py  stan.in
tool/ForSq/: CalcSq.py  MakeGreen.py  input.txt  lattice.py  read.py
(+2778 files in other folders)
